Add docker stuff

--- a/LiteClient/Properties/launchSettings.json
+++ b/LiteClient/Properties/launchSettings.json
@@ -3,6 +3,9 @@
     "LiteClient": {
       "commandName": "Project",
       "commandLineArgs": "127.0.0.1 9001 50"
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
